# python-mlflow

./: Makefile  main.py  pyproject.toml
mlartifacts/837204653782584385/58bb0d0b261545a18366521c4b850dfd/artifacts/iris_model/: MLmodel  conda.yaml  model.pkl
mlartifacts/837204653782584385/5c69c976861e4be987ad406bdc417abf/artifacts/iris_model/: MLmodel  python_env.yaml
mlruns/0/: meta.yaml
mlruns/837204653782584385/: meta.yaml
mlruns/837204653782584385/58bb0d0b261545a18366521c4b850dfd/: meta.yaml
mlruns/837204653782584385/58bb0d0b261545a18366521c4b850dfd/metrics/: accuracy
mlruns/837204653782584385/58bb0d0b261545a18366521c4b850dfd/tags/: mlflow.log-model.history  mlflow.runName
mlruns/837204653782584385/5c69c976861e4be987ad406bdc417abf/: meta.yaml
mlruns/837204653782584385/5c69c976861e4be987ad406bdc417abf/metrics/: accuracy
mlruns/837204653782584385/5c69c976861e4be987ad406bdc417abf/tags/: mlflow.log-model.history  mlflow.runName
mlruns/models/training-quickstart/: meta.yaml
mlruns/models/training-quickstart/version-1/: meta.yaml
mlruns/models/training-quickstart/version-2/: meta.yaml
